--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -34,3 +34,5 @@ ectt_com_type_forum#:#Forum
 ectt_com_type_mail#:#Mail
 ectt_com_type_chat#:#Chat
 ectt_filter_client_label#:#Mandant
+ectt_obj_type_grp#:#Gruppen
+ectt_obj_type_file#:#Dateien
